fix font issue on mobile

--- a/wp-content/themes/personal/assets/sass/base/_typography.scss
+++ b/wp-content/themes/personal/assets/sass/base/_typography.scss
@@ -1,6 +1,8 @@
 @mixin font-face-src($name, $file) {
     font-family: #{$name};
-    src: url("../fonts/#{$file}.eot?") format("eot"), url("../fonts/#{$file}.ttf") format("woff"), url("../fonts/#{$file}.woff") format("woff"), url("../fonts/#{$file}.ttf") format("truetype");
+    src: url("../fonts/#{$file}.eot?") format("eot"), url("../fonts/#{$file}.ttf") format("ttf"), url("../fonts/#{$file}.woff") format("woff"), url("../fonts/#{$file}.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
 }
 
 @font-face {
